tests/baselines/reference/duplicateLabel2.errors.txt
==== tests/cases/compiler/duplicateLabel2.ts (1 errors) ====
    target:
    while (true) {
      target:
      ~~~~~~
!!! error TS2000: Duplicate identifier 'target'.
      while (true) {
      }
    }